Bug 1786619 - Use fallback atomic operations on ARM < v7. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D157612