js/src/jit/shared/AtomicOperations-feeling-lucky-gcc.h
@@ -31,7 +31,8 @@
 // Explicitly exclude tier-1 platforms.
 
 #if (defined(__x86_64__) || defined(_M_X64) || defined(__i386__) || \
-     defined(_M_IX86) || defined(__arm__) || defined(__aarch64__))
+     defined(_M_IX86) || (defined(__arm__) && __ARM_ARCH >= 7) ||   \
+     defined(__aarch64__))
 #  error "Do not use on a tier-1 platform where inline assembly is available"
 #endif
 
@@ -54,6 +55,10 @@
 // work, you're mostly on your own.
 #  define HAS_64BIT_ATOMICS
 #  define HAS_64BIT_LOCKFREE
+#endif
+
+#if defined(__arm__)
+#  define HAS_64BIT_ATOMICS
 #endif
 
 #if defined(__ppc64__) || defined(__PPC64__) || defined(__ppc64le__) || \
